# docs2

./: .gitattributes  .gitignore  backlog.bat  backup.bat
C++/other-stuff/mandelbrotgpu-yay/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  OpenCL_FP64_Test.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mandelbrotgpu.cpp  mandelbrotgpu.vcxproj  mandelbrotgpu.vcxproj.filters  redis-link.py
C++/other-stuff/mandelbrotgpu-yay/mandelbrotgpu.dir/Debug/: mandelbrotgpu.exe.recipe
C++/other-stuff/mandelbrotgpu-yay/mandelbrotgpu.dir/Debug/mandelbrotgpu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
C++/other-stuff/mandelbrotgpu-yay/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
C++/other-stuff/mandelbrotgpu-yay/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
C++/other-stuff/mandelbrotgpu-yay/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
C++/other-stuff/mandelbrotgpu-yay/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Python/: USCF_Rating_Calc.7z  better-scrape.py  browse.py  check.html  dino.py  err.txt  gjhgjhgjkhgk.py  hehe.py  hghnhhjghjkhghg.py  hiiiiiiiiiiive.py  motionamp.py  observe.html  observe.js  open_tabs.txt  reeeeeeeeeg - Copy.py  res.html  scraaaape.py  simple.html  (+8 more)
(+640 files in other folders)
